--- a/index.html
+++ b/index.html
@@ -4,42 +4,69 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Landing Page</title>
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-    <div class="header"> Header logo
-        <a href="">header link one</a>
-        <a href="">header link two</a>
-        <a href="">header link three</a>
-    </div>
-    <div class="about">This website is awesome
-        <div class="about-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
-        <button class="about-button">Sign up</button>
-        <div class="about-image">
-            <img src="images/sunrise.jpg" alt="">
+    <div class="header"> 
+        <div class="header-logo">
+            Header logo
+        </div>
+        <div>
+            <a class="header-links" href="">header link one</a>
+            <a class="header-links" href="">header link two</a>
+            <a class="header-links" href="">header link three</a>
         </div>
     </div>
-    <div class="main-content">
-        <div class="main-title">Some random information</div>
-        <img src="" alt="">
-        <div class="main-subtext">this is some subtext under an illustration or image</div>
-        <img src="" alt="">
-        <div class="main-subtext">this is some subtext under an illustration or image</div>
-        <img src="" alt="">
-        <div class="main-subtext">this is some subtext under an illustration or image</div>
-        <img src="" alt="">
-        <div class="main-subtext">this is some subtext under an illustration or image</div>
+    <div class="main">
+        <div class="main-box">
+            <div class="main-text">This website is awesome</div>
+            <div class="main-subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+            <button class="main-button">Sign up</button>
+        </div>
+        <div>
+            <img class="main-img" src="images/sunrise.jpg" alt="">
+        </div>
+    </div>
+    <div class="information">
+        <p class="info-title">Some random information</p>
+        <div class="info-boxes">
+            <div>
+                <img class="info-img" src="images/sunrise.jpg" alt="">
+                <p class="info-subtext">this is some subtext under an illustration or image</p>
+            </div>
+            <div>
+                <img class="info-img" src="images/sunrise.jpg" alt="">
+                <p class="info-subtext">this is some subtext under an illustration or image</p>
+            </div>
+            <div>
+                <img class="info-img" src="images/sunrise.jpg" alt="">
+                <p class="info-subtext">this is some subtext under an illustration or image</p>
+            </div>
+            <div>
+                <img class="info-img" src="images/sunrise.jpg" alt="">
+                <p class="info-subtext">this is some subtext under an illustration or image</p>
+            </div>
+        </div>
     </div>
     <div class="quote">
-        <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just a filling up space, or maybe</p>
-        <p>-Thor, God of Thunder</p>
+        <div class="quote-text">
+            This is an inspiring quote, or a testimonial from a customer. Maybe it's just a filling up space, or maybe
+        </div>
+        <div class="author">
+            -Thor, God of Thunder
+        </div>
     </div>
-    <div class="service">
-        <p>Call to action! It's time!</p>
-        <p>Sign up for our product by clicking that button right over there</p>
-        <button class="service-button">Sign up</button>
+    <div class="cta">
+        <div>
+            <p class="cta-header">Call to action! It's time!</p>
+            <p class="cta-subtext">Sign up for our product by clicking that button right over there</p>
+        </div>
+        <div>
+            <button class="cta-button">Sign up</button>
+        </div>
     </div>
     <div class="footer">
-        Copyright @ The Odin Project 2021
+        <p>Copyright @ The Odin Project 2021</p>
     </div>
 </body>
 </html>  
